copy updated new

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     ],
     "scripts": {
         "post-install-cmd": [
-            "php -r \"copy('src/sagar-laravel-serverless-installer.sh', 'sagar-laravel-serverless-installer.sh');\""
+            "php -r \"copy('vendor/sagarchauhan/laravel-serverless-installer/src/serverless.yml', 'sagar-laravel-serverless-installer.sh');\""
         ]
     },
     "minimum-stability" : "dev"
